# oko

./: .gitignore  Cargo.toml  README.md  TESTING.md  query  run_all.bat  run_core_admin.bat  run_tray.bat  test_compile.bat  test_quote.bat  test_run.rs  test_win_link.bat
core-service/: Cargo.toml
core-service/src/: db.rs  ipc.rs  logger.rs  main.rs  network.rs  process.rs
docs/: ARCHITECTURE.md  ROADMAP.md
monitor-cli/: Cargo.toml
monitor-cli/src/: main.rs
tray-agent/: Cargo.toml
tray-agent/src/: app.rs  client.rs  dialog.rs  main.rs  tray.rs
watchdog-utility/: Cargo.toml
watchdog-utility/src/: main.rs  parser.rs
