[package]
name = "monitor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "io-util", "macros"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem"
] }
