[package]
name = "tray-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.24"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
widestring = "1.2"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
] }
lazy_static = "1.5.0"
